tests/NormalTests/paczka1/fuzzy1/30915456.err
Error in line 1: 5nviY S931 89,1
Error in line 2: ZGg S219 25,2
Error in line 3: 5nviY S203 20,1
Error in line 9: G0lANIGuF S203 47,0
Error in line 21: A856 S219 -1,8
Error in line 19: qhOykbpgu A856 5,5
Error in line 26: 5nviY S931 1,5
Error in line 32: qhOykbpgu S203 83,1
Error in line 23: G0lANIGuF S219 120,2
